chandeliers-lus/tests/compile_fail/ui/tc/poly/unused-ext.stderr
error: Type variable T cannot be inferred from the inputs of this node
 --> tests/compile_fail/ui/tc/poly/unused-ext.rs:4:15
  |
4 |     #[generic[T]]
  |               ^
  |
note: None of these arguments are of type T
 --> tests/compile_fail/ui/tc/poly/unused-ext.rs:5:20
  |
5 |     extern node id(t0: int) returns (t1: int);
  |                    ^^^^^^^^
